[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Images/Lined.png" type="Texture" id=2]

[node name="Main Menu" type="TextureRect"]
margin_left = 160.0
margin_top = -30.0
margin_right = 362.0
margin_bottom = 220.0
rect_rotation = 7.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -31.2936
margin_top = 5.64808
margin_right = 28.7064
margin_bottom = -44.3519
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 30, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Schodot!"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 49.0976
margin_top = 46.1758
margin_right = 149.098
margin_bottom = 66.1758
rect_scale = Vector2( 0.67, 0.67 )
color = Color( 0.803922, 0.803922, 0.803922, 1 )

[node name="Play" type="Button" parent="ColorRect"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -3.05176e-05
margin_right = 100.0
margin_bottom = 20.0
text = "Start To Learn"
icon_align = 1

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 100.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press To Play!"
align = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 114.669
margin_top = 72.5231
margin_right = 214.669
margin_bottom = 92.5231
rect_scale = Vector2( 0.67, 0.67 )
color = Color( 0.803922, 0.803922, 0.803922, 1 )

[node name="Magic" type="Button" parent="ColorRect2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -3.05176e-05
margin_right = 100.0
margin_bottom = 20.0
text = "Start To Learn"
icon_align = 1

[node name="Label" type="Label" parent="ColorRect2"]
margin_right = 100.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Create Words"
align = 1

[connection signal="pressed" from="ColorRect/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ColorRect2/Magic" to="." method="_on_Magic_pressed"]
